With functionalities working, some are left

--- a/src/app/getmessage.component.html
+++ b/src/app/getmessage.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let msg of getmsg()">
-    {{msg}}
+<Strong>Group Chat</Strong>
+<div *ngFor="let ms of getmsg()">
+    <p> {{ms.user}} : {{ms.msg}} </p>
 
 </div>
