--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -5,5 +5,5 @@
     <input type="text" #username>
     <br>
     <br>
-    <button (click)="login(username.value); flag=false ">Login</button>
+    <button (click)="login(username.value); flag=false; flagui() ">Login</button>
 </div>
