--- a/src/app/channel.component.html
+++ b/src/app/channel.component.html
@@ -1,6 +1,7 @@
-<strong>Channels</strong>
-<div *ngFor="let ch of getchannels()">
-    <button (click)="setcurrentch(ch)">{{ch}}</button>
+<strong>Channels</strong> <br>
+<!-- <strong>Current Chaanel:{{ch}}</strong> -->
+<!-- <div *ngFor="let ch of getchannels()">
+    <p><button (click)="setcurrentch(ch)">{{ch}}</button> </p>
 
 
 </div>
@@ -9,4 +10,48 @@
 <div>
     <input type="text" #channelname>
     <button (click)="addchannel(channelname.value)"> Add Channel</button>
+</div> -->
+<!-- 
+<hr>
+<div>
+    <Strong>Group Chat {{ch}}</Strong> &nbsp; <button *ngIf="flag1" (click)="subscribech();">Subscribe</button> &nbsp;
+    <button *ngIf="flag2" (click)="unsubscribech()">Unsubscribe</button>
+    <hr>
+    <div *ngFor="let ms of getmsg()">
+        <p> {{ms.user}} : {{ms.msg}} </p>
+
+    </div>
+</div> -->
+
+<div class="row">
+    <div class="col-4">
+        <div *ngFor="let ch of getchannels()">
+            <p><button (click)="setcurrentch(ch)">{{ch}}</button> </p>
+
+
+        </div>
+        <hr>
+
+        <div>
+            <input type="text" #channelname>
+            <button (click)="addchannel(channelname.value); "> Add Channel</button>
+        </div>
+    </div>
+    <div class="col">
+        <div>
+            <Strong>Group Chat {{ch}}</Strong> &nbsp; 
+            <button *ngIf="flag1" (click)="subscribech();">Subscribe</button>
+            &nbsp;
+            <button *ngIf="flag2" (click)="unsubscribech()">Unsubscribe</button>
+            <hr>
+            <div *ngFor="let ms of getmsg()">
+                <p> {{ms.user}} : {{ms.msg}} </p>
+
+            </div>
+            <div *ngIf="sendflag">
+                <nca-sendmessage></nca-sendmessage>
+            </div>
+            
+        </div>
+    </div>
 </div>
