--- a/src/app/sendmessage.component.html
+++ b/src/app/sendmessage.component.html
@@ -1,4 +1,4 @@
 <div>
     <input type="text" #msg>
-    <button (click)="sendmsg(msg.value)">Send Message</button>
+    <button (click)="sendmsg(msg.value)" class="btn-sm btn-success">Send Message</button>
 </div>
